--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "apexcharts": "^3.17.0",
     "chart.js": "^2.9.3",
     "date-fns": "^2.11.1",
     "moment": "^2.24.0",
